# compute-spend-analysis

./: .gitignore  CLAUDE.md  README.md  accounts_config.yaml  data_sources.md  ec2_cost_analyzer.py  ec2_cost_optimization_report.ipynb  multi_account_analyzer.py  multi_account_cost_report_20251223_155151.json  pyproject.toml  report_utils.py  requirements.txt  setup_multi_account.py  todo.md
automation/: run_weekly_report.sh
data/: ec2_cost_report_20251216_151335.json  ec2_cost_report_20251216_151735.json  ec2_cost_report_20251216_172909.json  ec2_cost_report_20251216_173020.json  multi_account_cost_report_20251223_123403.json
utils/: report_utils.py
