[project]
name = "compute-spend-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.15",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyyaml>=6.0.3",
]
